{
    "name": "InputActions",
    "maps": [
        {
            "name": "Player1Controller",
            "id": "6c9b11ad-6d10-461f-9f64-5b099ceca60d",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "4b05d237-afff-4709-96d3-2094b0b68743",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "9e9f9bfe-1f4c-450a-aec2-03dff5774feb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "e9461552-e1b0-4ce1-9548-a6f702e36df0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "3d6f7dc3-b317-46ea-ae9d-8c7bece2b37c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "68551751-8bb1-4a73-8263-d47433747cf4",
                    "path": "<Keyboard>/s",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff95f59d-728e-4873-a251-2f2878f407cc",
                    "path": "<Keyboard>/d",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "42f6e811-d873-483b-89ba-0ef973ac74b4",
                    "path": "<Keyboard>/a",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc1789f9-8424-49b3-884e-1a1716ee30d3",
                    "path": "<Keyboard>/w",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player2Controller",
            "id": "a9ab0f76-c768-4544-848c-e66a8b991fd5",
            "actions": [
                {
                    "name": "Up",
                    "type": "Button",
                    "id": "491e0f43-c647-4326-8d9f-acb2b462b2c1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Down",
                    "type": "Button",
                    "id": "afb84a4b-0302-4937-ab7b-b34bb6e0e6eb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "02f371b1-5c3e-4b9e-9df0-afd55e78c56d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "42f547e4-de36-4e64-aaec-660594f254d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "43dbfdec-db56-4877-a0cc-97e06f07c181",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9abc4da-676a-46f3-b55c-7581df31e48e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c71a0149-b7b5-4785-82bc-b16c86d4b399",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d453b83-e5e3-4a73-bb29-75d05e2abc22",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Up",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UIController",
            "id": "329df265-0353-4b41-a00c-0be295f9d38f",
            "actions": [
                {
                    "name": "GamePaused",
                    "type": "Button",
                    "id": "a759f452-d57a-4a09-96e8-54744574e188",
                    "expectedControlType": "Button",
                    "processors": "Invert",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d0cc2643-82f2-4b5b-a61b-8755d8237078",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GamePaused",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}